.local-dev/manifest/registry/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: registry

spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: registry

  template:
    metadata:
      labels:
        app: registry
    spec:
      enableServiceLinks: false
      automountServiceAccountToken: false

      volumes:
        - name: project
          hostPath:
            path: /work

      containers:
        - name: registry
          image: registry:2
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              name: http
          volumeMounts:
            - name: project
              subPath: .local-dev/registry/entrypoint.sh
              mountPath: /entrypoint.sh
            - name: project
              subPath: .local-dev/registry/gc.sh
              mountPath: /gc.sh
            - name: project
              subPath: .local-dev/registry-data
              mountPath: /var/lib/registry
