.local-dev/manifest/registry/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: registry

spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`registry.local`)
      services:
        - namespace: registry
          kind: Service
          name: registry
          port: http
          scheme: http
          strategy: RoundRobin
          weight: 1
